Update 'backend-tests-dotnet-basic-rldlbbvx' component image to: quay.io/rhtap_qe/backend-tests-dotnet-basic-rldlbbvx:2bc2456f402b11f65c4485581805e0065dd83643@sha256:e0a38e0cc4812348b1a4093d73b8daac8484a3a23caf5a0be6bd76c3f6f9b63d

--- a/components/backend-tests-dotnet-basic-rldlbbvx/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-dotnet-basic-rldlbbvx/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-dotnet-basic-rldlbbvx
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-dotnet-basic-rldlbbvx:2bc2456f402b11f65c4485581805e0065dd83643@sha256:e0a38e0cc4812348b1a4093d73b8daac8484a3a23caf5a0be6bd76c3f6f9b63d
+          name: container-image
